# Omcen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: models.py
config/: asgi.py  exception.py  public_key.py  settings.py  symmetric_key.py  urls.py  wsgi.py
file_encryption/: forms.py  models.py  urls.py  views.py
omcen/: admin.py  factory.py  forms.py  models.py  tests.py  urls.py  views.py
omcen/tests/: __init__.py
password_box/: README.md  admin.py  apps.py  forms.py  models.py  password_generate.py  urls.py  views.py
portfolio/: forms.py  urls.py  views.py
requirements/: base.txt  dev.txt
static/css/: style.css
tango/: README.md  admin.py  forms.py  models.py  urls.py  views.py
templates/account/: account_base.html  account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/file_encryption/: top.html
templates/omcen/: admin_create_plan.html  admin_create_service.html  admin_delete_plan.html  admin_service_control.html  admin_service_detail.html  admin_update_plan.html  base.html  change_profile.html  create_service.html  form_alert.html  linked_id_publishing.html  linking_omcen_users_to_social_accounts.html  linking_user.html  my_page.html  omcen_user_deactivate.html  plan_selection.html  service_control.html  top.html  (+5 more)
(+33 files in other folders)
