[tool.poetry]
name = "omcen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
django-allauth = "^0.45.0"
django-environ-2 = "^2.3.0"
django-bootstrap-v5 = "^1.0.7"
pycryptodome = "^3.11.0"
python-gettext = "^4.0"
social-auth-app-django = "4.0.0"
social-auth-core = "3.3.3"
django-widget-tweaks = "^1.4.9"
django-debug-toolbar = "^3.2.2"
coverage = "^6.1.1"
factory-boy = "^3.2.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
